  * postgresql-common.postinst: Stop debconf later so ucf can use it.
  * postgresql-common.postinst: Call su without - to avoid a warning.
  * t/003_package_checks.t: Add test case for logrotate.
  * t/020_create_sql_remove.t: Make pipe writes unbuffered.
  * pg_buildext: Document the loop action (present since version 141).
  * pg_buildext: Add "installcheck" action for use with autopkgtest.

  [ Martin Pitt ]
  * testsuite, pg_virtualenv: Don't fail if ifconfig is not installed. We
    don't require it as a dependency, and this breaks e. g. autopkgtests in
    minimal environments.
  * t/150_tsearch_stemming.t: Add tests for stemming/searching with non-ASCII
    characters. (See #689997)
  * debian/postgresql-common.triggers: Also trigger on
    /usr/share/postgresql/, so that installation of new server versions builds
    the corresponding dictionaries.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 09 Jan 2014 12:49:19 +0100

postgresql-common (152) unstable; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Drop oneiric/quantal for -9.2, only keep
    lucid/precise.
  * Drop support for obsolete oom_adj, all kernels in all supported
    Debian/Ubuntu releases support oom_score_adj. (See #646245)
  * debian/README.Debian: Fix commands to get a postgres user shell.
  * Change all "su" invocations to system user to specify an explicit shell,
    to fix breakage after latest base-passwd 3.5.30 (which changed system
    users to have no shell).
  * Bump Standards-Version to 3.9.5 (no changes necessary).

  [ Christoph Berg ]
  * pg_virtualenv: Fix program name in manpage.
  * pg_createcluster: --start-conf should override the value from
    createcluster.conf.
  * testsuite: Also mount a tmpfs on /etc/postgresql-common.

 -- Martin Pitt <mpitt@debian.org>  Thu, 09 Jan 2014 10:56:12 +0100

postgresql-common (151) unstable; urgency=low

  * pg_createcluster: Create /var/run/postgresql when missing.