@@ -12,6 +12,7 @@ pg_virtualenv usr/bin
 upgrade-scripts/* usr/share/postgresql-common/upgrade-scripts
 run-upgrade-scripts usr/share/postgresql-common
 pg_checksystem usr/share/postgresql-common
+pgdg usr/share/postgresql-common
 testsuite usr/share/postgresql-common
 t/* usr/share/postgresql-common/t
 createcluster.conf etc/postgresql-common
