@@ -11,6 +11,8 @@ postgresql-common (153) UNRELEASED; urgency=medium
   * t/020_create_sql_remove.t: Make pipe writes unbuffered.
   * pg_buildext: Document the loop action (present since version 141).
   * pg_buildext: Add "installcheck" action for use with autopkgtest.
+  * Install /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh to enable
+    activating the apt.postgresql.org repository.
 
   [ Martin Pitt ]
   * testsuite, pg_virtualenv: Don't fail if ifconfig is not installed. We
